fix:texting cicd pipeline

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,8 +8,10 @@ variables:
 
 stages:
   - prepare
+  - test
   - build
   - deploy
+
 
 gitlab-registry:
   stage: prepare
@@ -24,12 +26,23 @@ gitlab-registry:
       --docker-username=image-registry \
       --docker-password=$CI_REGISTRY_TOKEN -n $NAMESPACE
 
+
+basic-test:
+  stage: test
+  image: python:3.9
+  script:
+    - echo "Running basic tests..."
+    - python -c "print('All tests passed!')"
+  allow_failure: true
+
+
 .build:
   stage: build
   script:
     - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
     - docker build -t $IMAGE:$IMAGE_TAG $IMAGE/.
     - docker push $IMAGE:$IMAGE_TAG
+
 
 build-client:
   extends: .build
@@ -40,6 +53,7 @@ build-server:
   extends: .build
   variables:
     IMAGE: server
+
 
 deploy:
   stage: deploy
