fix:issuse 24 lint, test stages  requirementtxt and demotest.py added

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,7 @@ variables:
 
 stages:
   - prepare
+  - lint
   - test
   - build
   - deploy
@@ -20,20 +21,25 @@ gitlab-registry:
     NAMESPACE: mylab-sweii
   script:
     - kubectl delete secret gitlab-registry-secret -n $NAMESPACE || true
-    - |
-      kubectl create secret docker-registry gitlab-registry-secret \
+    - kubectl create secret docker-registry gitlab-registry-secret \
       --docker-server=$CI_REGISTRY \
       --docker-username=image-registry \
       --docker-password=$CI_REGISTRY_TOKEN -n $NAMESPACE
+      
 
-
-basic-test:
-  stage: test
-  image: python:3.9
+lint:
+  stage: lint
   script:
-    - echo "Running basic tests..."
-    - python -c "print('All tests passed!')"
-  allow_failure: true
+    - pip install flake8 black isort
+    - flake8 team14/
+    - black --check team14/
+    - isort --check-only team14/
+
+test:
+  stage: test
+  script:
+    - pip install pytest
+    - pytest tests/
 
 
 .build:
