--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,13 +17,13 @@ gitlab-registry:
   stage: prepare
   image: "thlmylab/swakkd:stable"
   variables:
-    NAMESPACE: mylab-sweii
+    NAMESPACE: mylab-sweii/team14
   script:
     - kubectl delete secret gitlab-registry-secret -n $NAMESPACE || true
-    - kubectl create secret docker-registry gitlab-registry-secret \
+    - "kubectl create secret docker-registry gitlab-registry-secret \
       --docker-server=$CI_REGISTRY \
       --docker-username=image-registry \
-      --docker-password=$CI_REGISTRY_TOKEN -n $NAMESPACE
+      --docker-password=$CI_REGISTRY_TOKEN -n $NAMESPACE"
       
 
 lint:
