fix(pipeline): testing pipeline changes

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,6 @@ stages:
   - build
   - deploy
 
-
 gitlab-registry:
   stage: prepare
   image: "thlmylab/swakkd:stable"
@@ -21,11 +20,11 @@ gitlab-registry:
     NAMESPACE: mylab-sweii
   script:
     - kubectl delete secret gitlab-registry-secret -n $NAMESPACE || true
-    - kubectl create secret docker-registry gitlab-registry-secret \
+    - "kubectl create secret docker-registry gitlab-registry-secret \
       --docker-server=$CI_REGISTRY \
       --docker-username=image-registry \
-      --docker-password=$CI_REGISTRY_TOKEN -n $NAMESPACE
-
+      --docker-password=$CI_REGISTRY_TOKEN -n $NAMESPACE"
+      
 
 lint:
   stage: lint
