--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,7 +33,7 @@ lint:
     - pip3 install flake8 black isort
     - flake8 client/mainwindow.py
     #- black --check client/mainwindow.py
-    - isort --check-only client/mainwindow.py
+    - isort client/mainwindow.py
 
 test:
   stage: test
