--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,7 +40,7 @@ test:
   script:
     - apk add --no-cache py3-pip
     - pip3 install pytest
-    - python3 demotest.py
+    - python3 tests/demotest.py
 
 
 .build:
