fix(pipeline): working on file changes

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,7 +40,8 @@ test:
   script:
     - apk add --no-cache py3-pip
     - pip3 install pytest
-    - python3 tests/integration_test.py
+    - pytest tests/demotest.py
+    - pytest tests/test_demo.py
 
 
 .build:
