--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,6 +41,7 @@ test:
     - apk add --no-cache py3-pip
     - pip3 install pytest
     - export PYTHONPATH=$PYTHONPATH:/builds/swe/sose25/team14
+    - pip3 install PyQt6
     - pytest tests/demotest.py
     - pytest tests/test_demo.py
 
