--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,8 +29,8 @@ stages:
 lint:
   stage: lint
   script:
-    - apk add --no-cache py3-pip
-    - pip3 install flake8 black isort
+    - python -m pip install --upgrade pip
+    - pip install flake8 black isort
     - flake8 client/mainwindow.py
     - black client/mainwindow.py
     - isort client/mainwindow.py
