--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,8 +28,9 @@ stages:
 
 lint:
   stage: lint
+  image: python:3.8
   script:
-    - apk add --no-cache pip
+    - pip install --upgrade pip
     - pip install flake8 black isort
     - flake8 client/mainwindow.py
     - black client/mainwindow.py
