--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,11 +38,12 @@ lint:
 
 test:
   stage: test
+  image: python:3.8
   script:
-    - apk add --no-cache py3-pip
-    - pip3 install pytest
+    - pip install --upgrade pip
+    - pip install pytest
     - export PYTHONPATH=$PYTHONPATH:/builds/swe/sose25/team14
-    - pip3 install PyQt6
+    - pip install PyQt6
     - pytest tests/demotest.py
     - pytest tests/test_demo.py
 
