--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,9 +42,11 @@ test:
   script:
     - pip install pytest
     - pip install PyQt6
-    - apt-get update && apt-get install -y libgl1
-    - apt-get update && apt-get install -y libxkbcommon0
-    - apt-get install -y libegl1
+    - apt-get update && apt-get install -y \
+      libgl1 \
+      libxkbcommon0 \
+      libegl1 \
+      libdbus-1-3
     - export PYTHONPATH=$PYTHONPATH:/builds/swe/sose25/team14
     - pytest tests/demotest.py
     - pytest tests/test_demo.py
