fix(pipeline): working on file changes

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,6 +42,7 @@ test:
   script:
     - pip install pytest
     - pip install PyQt6
+    - pip install werkzeug
     - apt-get update && apt-get install -y libgl1
     - apt-get update && apt-get install -y libxkbcommon0
     - apt-get install -y libegl1
