--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,8 +50,8 @@ test:
     - apt-get install -y libdbus-1-3
     - export PYTHONPATH=$PYTHONPATH:/builds/swe/sose25/team14
     - export QT_QPA_PLATFORM=offscreen
-    - pytest tests/demotest.py
-    - pytest tests/test_demo.py
+    - pytest tests/demotest.py --maxfail=10 --dist=loadscope -n auto
+    - pytest tests/test_demo.py --maxfail=10 --dist=loadscope -n auto
 
 
 .build:
