--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,31 +50,31 @@ test:
     - apt-get install -y libdbus-1-3
     - export PYTHONPATH=$PYTHONPATH:/builds/swe/sose25/team14
     - export QT_QPA_PLATFORM=offscreen
-    #- pytest tests/demotest.py
+    - pytest tests/demotest.py
     - pytest tests/test_demo.py
 
-.build:
-  stage: build
-  script:
-    - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
-    - docker build -t $IMAGE:$IMAGE_TAG $IMAGE/.
-    - docker push $IMAGE:$IMAGE_TAG
+#.build:
+#  stage: build
+#  script:
+#    - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
+#    - docker build -t $IMAGE:$IMAGE_TAG $IMAGE/.
+#    - docker push $IMAGE:$IMAGE_TAG
 
-build-client:
-  extends: .build
-  variables:
-    IMAGE: client
+#build-client:
+#  extends: .build
+#  variables:
+#    IMAGE: client
 
-build-server:
-  extends: .build
-  variables:
-    IMAGE: server
+#build-server:
+#  extends: .build
+#  variables:
+#    IMAGE: server
 
-deploy:
-  stage: deploy
-  image: thlmylab/swakkd:stable
-  script:
-    - sed -i "s/LAST_DEPLOYED_UNDEFINED/$(date -Iseconds)/g" $CLIENT_DEPLOYMENT_YAML
-    - sed -i "s/LAST_DEPLOYED_UNDEFINED/$(date -Iseconds)/g" $SERVER_DEPLOYMENT_YAML
-    - kubectl apply -f $CLIENT_DEPLOYMENT_YAML
-    - kubectl apply -f $SERVER_DEPLOYMENT_YAML
+#deploy:
+#  stage: deploy
+#  image: thlmylab/swakkd:stable
+#  script:
+#    - sed -i "s/LAST_DEPLOYED_UNDEFINED/$(date -Iseconds)/g" $CLIENT_DEPLOYMENT_YAML
+#    - sed -i "s/LAST_DEPLOYED_UNDEFINED/$(date -Iseconds)/g" $SERVER_DEPLOYMENT_YAML
+#    - kubectl apply -f $CLIENT_DEPLOYMENT_YAML
+#    - kubectl apply -f $SERVER_DEPLOYMENT_YAML
