--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,6 @@ variables:
 
 stages:
   - prepare
-  - installation
   - lint
   - test
   - build
@@ -32,8 +31,8 @@ lint:
   script:
     - pip install --upgrade pip
     - pip install flake8 black isort
-    - flake8 client/mainwindow.py
     - black client/mainwindow.py
+    - flake8 client/mainwindow.py
     - isort client/mainwindow.py
 
 test:
@@ -51,6 +50,7 @@ test:
     - export PYTHONPATH=$PYTHONPATH:/builds/swe/sose25/team14
     - export QT_QPA_PLATFORM=offscreen
     - pytest tests/unit_test.py
+    - pytest tests/integration_test.py || exit 1
 
 #.build:
 #  stage: build
